# cli-tools-registry

./: .gitignore  README.md  registry.yaml  update_registry.py
.github/workflows/: check_registry_from_pr.yaml  update_registry.yaml  update_registry_from_pr.yaml  update_registry_from_push.yaml
cli-code2cursor/: .gitignore  README.md  pyproject.toml
cli-code2cursor/src/cli_code2cursor/: __init__.py  cli.py  extensions.py  utils.py
cli-notice/: .gitignore  README.md  pyproject.toml
cli-notice/src/cli_notice/: bot.py  cli.py
cli-r2r/: .gitignore  README.md  pyproject.toml
cli-r2r/src/cli_r2r/: cli.py
cli-r2r/src/r2r/: cli.py
cli-shard/: README.md  pyproject.toml
cli-shard/src/cli_shard/: cli.py
cli-sview/: README.md  pyproject.toml
cli-sview/src/cli_sview/: __init__.py  cli.py
cli-sview1/: README.md  pyproject.toml
